--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@mui/material": "5.11.12",
+    "axios": "^1.3.4",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
